<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="mr_media_route_button_content_description">Media output</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="app_name">Crackle</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="loading">Loading…</string>
    <string name="no_media_info">No media information available</string>
    <string name="session_reconnection_attempt">Attempting to recover previous session…</string>
    <string name="failed_to_launch_app">Failed to lauch application</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_find_app">The application you are trying to launch is not availabled on your Chromecast device</string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_unknown">An unknown error was encountered</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_setting_volume">Failed to set the volume</string>
    <string name="failed_no_connection">No connection to the cast device is present</string>
    <string name="failed_no_connection_short">No connection</string>
    <string name="failed_no_connection_trans">Connection to the cast device has been lost. Application is trying to re-etablish the connection, if possible. Please wait for a few seconds and try again.</string>
    <string name="failed_perform_action">Failed to perform the action</string>
    <string name="failed_status_request">Failed to sync up with the cast device</string>
    <string name="failed_load">Failed to load media on the cast device</string>
    <string name="failed_seek">Failed to seek to the new position on the cast device</string>
    <string name="failed_receiver_player_error">Receiver player has encountered a sever error</string>
    <string name="error_start_session_failed">Unable to start a session with the Chromecast device.</string>
    <string name="error_session_ended">Lost connectivity with the Chromecast device.</string>
    <string name="error_ramp_command_failed">Failed to control the media.</string>
    <string name="error_no_session">Not currently connected to the Chromecast device.</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="sign_in_register">Sign In/Register</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about_crackle">About Crackle</string>
    <string name="faq">Faq</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="rate_me">Rate Me</string>
    <string name="not_a_member_label">Not a Member?</string>
    <string name="register_button_text">Get a Free Crackle Account</string>
    <string name="account_description_text">With a free account you bypass the age gate, create your own watchlists, and be the first to learn about new movies on Crackle with the Crackle newsletter.</string>
    <string name="email_hint">E-mail</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="newsletter_caption">Send me the Crackle Insider Newsletter</string>
    <string name="tos_caption">I have read and agreed to the Terms of Service</string>
    <string name="sign_in_caption2">Sign in with your Crackle account</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="about_nielsen">About Nielsen</string>
    <string name="watch_now_text_lower">Watch Now</string>
    <string name="done_text">Done</string>
    <string name="sessionm_text">mPoints</string>
    <string name="audio_label_text">Audio:</string>
    <string name="language_label_text">Closed Captioning:</string>
    <string name="add_to_watchlist_text">Add To Watchlist</string>
    <string name="remove_from_watchlist_text">Remove From Watchlist</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_mpoints">mPoints</string>
    <string name="menu_give_feedback">Give Feedback</string>
    <string name="menu_about_crackle">About Crackle</string>
    <string name="menu_sign_in">Sign In/Register</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_terms">Terms of Service</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_about_nielsen">About Nielsen</string>
    <string name="menu_rate_me">Rate Me</string>
    <string name="menu_list_grid">List/Grid View</string>
    <string name="menu_grid_view">Thumbnail view</string>
    <string name="menu_list_view">List view</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_buy">Buy on Amazon</string>
    <string name="menu_like">Like</string>
    <string name="menu_share">Share</string>
    <string name="menu_play_on">Play On</string>
    <string name="action_chromecast">Chromecast</string>
    <string name="action_captions">Captions</string>
    <string name="caption_settings_button">Caption Settings</string>
    <string name="search_title">Search</string>
</resources>