<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_mediaroute" android:title="@string/action_chromecast" app:showAsAction="always" app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider" />
    <item android:icon="@drawable/ic_action_search" android:id="@id/search" android:title="@string/search_title" app:showAsAction="collapseActionView|ifRoom" app:actionViewClass="android.widget.SearchView" />
    <item android:icon="@drawable/browse_button" android:id="@id/menu_list_grid" android:title="@string/menu_list_grid" android:showAsAction="always">
        <menu>
            <item android:id="@id/menu_grid_view" android:title="@string/menu_grid_view" />
            <item android:id="@id/menu_list_view" android:title="@string/menu_list_view" />
        </menu>
    </item>
    <item android:id="@id/menu_sign_in" android:title="@string/menu_sign_in" android:showAsAction="never" />
    <item android:id="@id/menu_history" android:title="@string/menu_history" android:showAsAction="never" />
    <item android:id="@id/menu_settings" android:title="@string/menu_settings" android:showAsAction="never" />
    <item android:id="@id/menu_mpoints" android:title="@string/menu_mpoints" android:showAsAction="never" />
    <item android:id="@id/menu_give_feedback" android:title="@string/menu_give_feedback" android:showAsAction="never" />
    <item android:id="@id/menu_about_crackle" android:title="@string/menu_about_crackle" android:showAsAction="never" />
    <item android:id="@id/menu_faq" android:title="@string/menu_faq" android:showAsAction="never" />
    <item android:id="@id/menu_terms" android:title="@string/menu_terms" android:showAsAction="never" />
    <item android:id="@id/menu_privacy" android:title="@string/menu_privacy" android:showAsAction="never" />
    <item android:id="@id/menu_about_nielsen" android:title="@string/menu_about_nielsen" android:showAsAction="never" />
    <item android:id="@id/menu_rate_me" android:title="@string/menu_rate_me" android:showAsAction="never" />
</menu>