<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_mediaroute" android:title="@string/action_chromecast" app:showAsAction="always" app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider" />
    <item android:icon="@drawable/delete_button" android:id="@id/menu_delete" android:title="@string/menu_delete" android:showAsAction="always" />
    <item android:id="@id/menu_settings" android:title="@string/menu_settings" android:showAsAction="never" />
    <item android:id="@id/menu_mpoints" android:title="@string/menu_mpoints" android:showAsAction="never" />
    <item android:id="@id/menu_give_feedback" android:title="@string/menu_give_feedback" android:showAsAction="never" />
    <item android:id="@id/menu_about_crackle" android:title="@string/menu_about_crackle" android:showAsAction="never" />
    <item android:id="@id/menu_sign_in" android:title="@string/menu_sign_in" android:showAsAction="never" />
</menu>