<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/email_edit_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email_hint" android:editable="true" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
            <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/first_name_edit_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/first_name_hint" android:editable="true" android:imeOptions="actionNext" />
            <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/last_name_edit_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/last_name_hint" android:editable="true" android:imeOptions="actionNext" />
            <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/password_edit_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_hint" android:password="true" android:editable="true" android:imeOptions="actionNext" />
            <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/password_confirm_edit_box" android:padding="10.0dip" android:nextFocusDown="@id/date_of_birth" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/confirm_password_hint" android:password="true" android:editable="true" android:imeOptions="actionNext" />
            <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:id="@id/date_of_birth" android:background="@drawable/spinner_background_holo_dark" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/date_of_birth_hint" android:layout_below="@id/bottom_pane" android:layout_centerVertical="true" />
            <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <com.gotv.crackle.views.CrackleRadioButton android:textColor="@color/main_text_color" android:id="@id/male_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/male" />
                <com.gotv.crackle.views.CrackleRadioButton android:textColor="@color/main_text_color" android:id="@id/female_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/female" />
            </RadioGroup>
            <com.gotv.crackle.views.CrackleCheckBox android:textSize="16.0sp" android:textColor="@color/main_text_color" android:id="@id/newsletter_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/newsletter_caption" />
            <com.gotv.crackle.views.CrackleCheckBox android:textSize="16.0sp" android:textColor="@color/main_text_color" android:id="@id/tos_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/tos_caption" />
            <com.gotv.crackle.views.CrackleButton android:enabled="false" android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/register_button" android:background="@drawable/orange_button" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/register_button_text" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="3.0" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>