<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.gotv.crackle.views.CrackleTextView android:textSize="16.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/sign_in_label" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_in_caption2" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="4.0dip" />
        <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/email_edit_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email_hint" android:editable="true" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
        <com.gotv.crackle.views.CrackleEditText android:textSize="20.0sp" android:gravity="left" android:id="@id/password_edit_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_hint" android:password="true" android:editable="true" android:imeOptions="actionNext" />
        <com.gotv.crackle.views.CrackleButton android:enabled="false" android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/sign_in_button" android:background="@drawable/orange_button" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sign_in_button_text" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="2.0" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/forgot_password_button" android:background="@drawable/orange_button" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/forgot_password_button_text" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="2.0" />
        <com.gotv.crackle.views.CrackleTextView android:textSize="16.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/not_a_member_text" android:background="#00000000" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/not_a_member_label" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/register_button" android:background="@drawable/orange_button" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/register_button_text" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="3.0" />
        <com.gotv.crackle.views.CrackleTextView android:textSize="12.0sp" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/account_description" android:background="#00000000" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_description_text" />
    </LinearLayout>
</ScrollView>