<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/crackle_orange" android:gravity="left" android:id="@id/sign_in_register_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_in_register" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/history_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/settings_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/about_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_crackle" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/sessionm_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sessionm_text" android:drawableRight="@drawable/go_arrow" />
        <View android:id="@id/sessionm_line" android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/faq_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/terms_of_service_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/terms_of_service" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/privacy_policy_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/privacy_policy" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/about_nielsen_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_nielsen" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/give_feedback_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/give_feedback" android:drawableRight="@drawable/go_arrow" />
        <View android:background="@color/crackle_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.gotv.crackle.views.CrackleButton android:textSize="20.0sp" android:textColor="@color/main_text_color" android:gravity="left" android:id="@id/rate_me_button" android:background="#00000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rate_me" android:drawableRight="@drawable/go_arrow" />
    </LinearLayout>
</ScrollView>