<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/audio_options" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_label_text" />
        <Spinner android:id="@id/audio_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/language_options" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/language_label_text" />
        <Spinner android:id="@id/language_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/settings_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/caption_settings_button" android:layout_weight="1.0" />
        <Button android:id="@id/ok_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/done_text" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>