<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.gotv.crackle.views.CrackleButton android:textSize="16.0sp" android:textColor="@color/main_text_color" android:id="@id/watch_now_button" android:background="@drawable/details_button" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/watch_now_text_lower" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_weight="1.0" />
    <com.gotv.crackle.views.CrackleToggleButton android:textSize="16.0sp" android:textColor="@color/main_text_color" android:id="@id/add_to_watchlist_button_movie" android:background="@drawable/details_button" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:textOn="@string/remove_from_watchlist_text" android:textOff="@string/add_to_watchlist_text" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_weight="1.0" />
</LinearLayout>